Add cron job to export low coverage files to bigquery.
Also renames a few entities for consistency

Bug: 1141021
Change-Id: I75e83c5994dc7e0943e93edce67b68d4cc5d9288
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2658096
Commit-Queue: Prakhar Asthana <pasthana@google.com>
Auto-Submit: Prakhar Asthana <pasthana@google.com>
Reviewed-by: Zhaoyang Li <zhaoyangli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#38131}

--- a/appengine/findit/cron.yaml
+++ b/appengine/findit/cron.yaml
@@ -70,3 +70,9 @@ cron:
   schedule: every 24 hours
   retry_parameters:
     job_retry_limit: 0
+
+- description: Query and export metrics for low coverage files to bigquery.
+  url: /coverage/cron/low-coverage-files
+  schedule: every 24 hours
+  retry_parameters:
+    job_retry_limit: 0
