--- a/appengine/findit/queue.yaml
+++ b/appengine/findit/queue.yaml
@@ -101,6 +101,12 @@ queue:
   retry_parameters:
     task_retry_limit: 0
 
+- name: files-with-low-coverage-metrics-queue
+  rate: 1/s
+  max_concurrent_requests: 1
+  retry_parameters:
+    task_retry_limit: 0
+
 # Queue for auto-actions. These are created transactionally and performed
 # asynchronously. Retry for up to one hour, because sheriffs are likely to have
 # taken action by then.
