add index for FileCoverageData
Would be used to find out list of low coverage files by filtering for file coverage reports for the latest commit

Bug: 1141021
Change-Id: I9c759b8270a378bb8751ba48b3611d5b289b47d8
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2666729
Commit-Queue: Zhaoyang Li <zhaoyangli@chromium.org>
Reviewed-by: Zhaoyang Li <zhaoyangli@chromium.org>
Auto-Submit: Prakhar Asthana <pasthana@google.com>
Cr-Commit-Position: refs/heads/master@{#38150}

--- a/appengine/findit/index.yaml
+++ b/appengine/findit/index.yaml
@@ -468,6 +468,15 @@ indexes:
   - name: builder
   - name: commit_timestamp
 
+- kind: FileCoverageData
+  properties:
+  - name: gitiles_commit.project
+  - name: gitiles_commit.server_host
+  - name: gitiles_commit.revision
+  - name: gitiles_commit.ref
+  - name: bucket
+  - name: builder
+
 - kind: PresubmitCoverageData
   properties:
   - name: cl_patchset.server_host
