--- a/appengine/findit/cron.yaml
+++ b/appengine/findit/cron.yaml
@@ -73,7 +73,7 @@ cron:
 
 - description: Query and export metrics for low coverage files to bigquery.
   url: /coverage/cron/low-coverage-files
-  schedule: every 24 hours 01:00
+  schedule: every day 01:00
   timezone: America/Los_Angeles
   retry_parameters:
     job_retry_limit: 0
