--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -68,7 +68,7 @@ import:
   subpackages:
   - diffmatchpatch
 - package: github.com/smartystreets/assertions
-  version: master
+  version: proto-go-render
   repo: https://chromium.googlesource.com/external/github.com/smartystreets/assertions.git
 - package: github.com/smartystreets/goconvey
   version: master
