Revert "[go] Use patched of GoConvey's assertions to compare protobufs."
This reverts commit e070565b121467a7ac1b2f26d8482b1437d2f9e7.

Reason for revert: insufficient.
Yes, this solves the problem of ~forever rendering of *unequal* protobufs. But it doesn't solve the problem of reflect.DeepEqual
not working properly on protobufs, and GoConvey's assertions rely
on it for structs.

Original change's description:
> [go] Use patched of GoConvey's assertions to compare protobufs.
>
> See diff in
> https://chromium.googlesource.com/external/github.com/smartystreets/assertions/+/a35e279c448c3194b31ef7fb1f3e2ddaa6be6671%5E%21/
>
> R=​iannucci, vadimsh
>
> Bug: tandrii has no life.
> Change-Id: I739dd09d2002181fda6bb5b59cb04632b4d07153
> Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2685581
> Commit-Queue: Robbie Iannucci <iannucci@chromium.org>
> Auto-Submit: Andrii Shyshkalov <tandrii@google.com>
> Reviewed-by: Robbie Iannucci <iannucci@chromium.org>
> Cr-Commit-Position: refs/heads/master@{#38400}

TBR=iannucci@chromium.org,vadimsh@chromium.org,tandrii@google.com,infra-scoped@luci-project-accounts.iam.gserviceaccount.com

Change-Id: I4f5c09f078f10d4c121227b955b8186bf862c025
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Bug: tandrii has no life.
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2687895
Reviewed-by: Robbie Iannucci <iannucci@chromium.org>
Commit-Queue: Andrii Shyshkalov <tandrii@google.com>
Cr-Commit-Position: refs/heads/master@{#38420}

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -68,7 +68,7 @@ import:
   subpackages:
   - diffmatchpatch
 - package: github.com/smartystreets/assertions
-  version: proto-go-render
+  version: master
   repo: https://chromium.googlesource.com/external/github.com/smartystreets/assertions.git
 - package: github.com/smartystreets/goconvey
   version: master
