[buildbucket] dispatch UpdateBuild reqs to default-go
If this CL is submitted, GoBB will forward the requests to PyBB.
In the next days, GoBB will be updated to gradually increase
the portion of UpdateBuild requests to be processed in Go.
e.g., https://crrev.com/c/2688445

Bug: 1110990
Change-Id: I5a4c69284ff0aae475c859967d3506d72522f2a4
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2688266
Reviewed-by: Robbie Iannucci <iannucci@chromium.org>
Commit-Queue: Scott Lee <ddoman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#38441}

--- a/appengine/cr-buildbucket/dispatch.yaml
+++ b/appengine/cr-buildbucket/dispatch.yaml
@@ -38,3 +38,7 @@ dispatch:
   # This endpoint only exists in luci-go.
   - url: "*/auth/api/v1/server/client_id"
     service: default-go
+
+  # UpdateBuild is implemented in Go, so serve it from there.
+  - url: "*/prpc/buildbucket.v2.Builds/UpdateBuild"
+    service: default-go
