Modify files low coverage crob job to export low coverage for all files
Change-Id: I645603bd3fa2c5b54fd06e81679fcb5d6268699b
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2687956
Auto-Submit: Prakhar Asthana <pasthana@google.com>
Commit-Queue: Zhaoyang Li <zhaoyangli@chromium.org>
Reviewed-by: Zhaoyang Li <zhaoyangli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#38454}

--- a/appengine/findit/cron.yaml
+++ b/appengine/findit/cron.yaml
@@ -71,8 +71,8 @@ cron:
   retry_parameters:
     job_retry_limit: 0
 
-- description: Query and export metrics for low coverage files to bigquery.
-  url: /coverage/cron/low-coverage-files
+- description: Query and export metrics for files to bigquery.
+  url: /coverage/cron/files-absolute-coverage
   schedule: every day 01:00
   timezone: America/Los_Angeles
   retry_parameters:
