Use Ubuntu 20.04 (focal) for arm64 and x64 docker images.
Add packages required to run femu to arm64 docker images.

Bug: 1058247
Change-Id: Ibc1632923317e29f3bb05852259dd97df59466d5
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2688627
Reviewed-by: Ben Pastene <bpastene@chromium.org>
Commit-Queue: Stephen Roe <steveroe@google.com>
Cr-Commit-Position: refs/heads/master@{#38474}

--- a/docker/swarm_docker/Dockerfile
+++ b/docker/swarm_docker/Dockerfile
@@ -1,14 +1,17 @@
-FROM ubuntu:bionic
+FROM ubuntu:focal
 
 ENV DEBIAN_FRONTEND noninteractive
 
 ARG ARCH_PACKAGES
 ENV ARCH_PACKAGES ${ARCH_PACKAGES:-}
+ARG KVM_PACKAGES
+ENV KVM_PACKAGES ${KVM_PACKAGES:-}
 
 RUN /usr/bin/apt-get update
 RUN /usr/bin/apt-get -y dist-upgrade
-RUN /usr/bin/apt-get -y install curl lsof openssh-client python sudo \
-       $ARCH_PACKAGES
+RUN /usr/bin/apt-get -y install curl lsof openssh-client python sudo
+RUN /usr/bin/apt-get -y install $ARCH_PACKAGES
+RUN /usr/bin/apt-get -y install $KVM_PACKAGES
 
 # Cleanup to shrink image sizes.
 RUN /usr/bin/find /var/lib/apt/lists /tmp /var/tmp /usr/share/info \
