Install a JDK in all docker_device images.
Because pinpoint still needs it. And will ~forever.

Sigh.

Bug: 1175744
Change-Id: Id6ce339fd060ddf2072df839c8919b0546540a04
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2693918
Commit-Queue: Ben Pastene <bpastene@chromium.org>
Reviewed-by: Haiyang Pan <hypan@google.com>
Cr-Commit-Position: refs/heads/master@{#38542}

--- a/docker/docker_devices/Dockerfile
+++ b/docker/docker_devices/Dockerfile
@@ -14,6 +14,15 @@ RUN /usr/bin/apt-get -y install curl iputils-ping locales lsb-release lsof \
 # install-build-deps.sh and the package ends up waiting on user input.
 RUN /usr/bin/apt-get -y install tzdata
 
+# Every Chrome test today should be using the hermetic JDK fetched as part of
+# a Chrome checkout. However, prior to crrev.com/c/2660219, some tests were
+# depending on a JDK insalled in the system. And since pinpoint is still testing
+# revisions prior to that change, we have to oblige it and continue installing
+# JDKs in the system.
+# FIXME: Remove this once pinpoint no longer tests revisions prior to
+# crrev.com/c/2660219. Likely sometime in 2022.
+RUN /usr/bin/apt-get -y install default-jdk
+
 RUN echo 'ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true' \
       | /usr/bin/debconf-set-selections
 RUN echo 'msttcorefonts msttcorefonts/defoma select note' \
