[cr-buildbucket] Emergency roll back UpdateBuild to backend.
Looks like builds are not correctly informing Milo of status changes.

R=ddoman, tandrii

Change-Id: I5991a8f36e1437e4a8da1973f598fe8955d5b39c
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2706068
Auto-Submit: Robbie Iannucci <iannucci@chromium.org>
Commit-Queue: Scott Lee <ddoman@chromium.org>
Reviewed-by: Scott Lee <ddoman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#38646}

--- a/appengine/cr-buildbucket/dispatch.yaml
+++ b/appengine/cr-buildbucket/dispatch.yaml
@@ -34,5 +34,6 @@ dispatch:
     service: default-go
 
   # UpdateBuild is implemented in Go, so serve it from there.
+  # Temporarially rolling this back to backend
   - url: "*/prpc/buildbucket.v2.Builds/UpdateBuild"
-    service: default-go
+    service: backend
