--- a/appengine/cr-buildbucket/dispatch.yaml
+++ b/appengine/cr-buildbucket/dispatch.yaml
@@ -34,6 +34,5 @@ dispatch:
     service: default-go
 
   # UpdateBuild is implemented in Go, so serve it from there.
-  # Temporarially rolling this back to backend
   - url: "*/prpc/buildbucket.v2.Builds/UpdateBuild"
-    service: backend
+    service: default-go
