Inventory v2: reminder to sync chromeos protos before deploying
Recent upload doesn't include the latest proto change, which causes
device config sync failure.

BUG=None
TEST=make up-dev

Change-Id: I183fbcef9efd3c78ca4b94204c02d6676c267a44
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2706546
Reviewed-by: Eshwar Narayan <eshwarn@chromium.org>
Commit-Queue: Xixuan Wu <xixuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#38689}

--- a/go/src/infra/appengine/cros/lab_inventory/Makefile
+++ b/go/src/infra/appengine/cros/lab_inventory/Makefile
@@ -73,8 +73,16 @@ dev:
 
 # Uploading
 
+.PHONY: check-sync
+check-sync:
+	@printf "Please update the following luci path to ToT:\n"
+	@printf "	infra/go/src/go.chromium.org/chromiumos/infra/proto\n"
+	@printf "	infra/go/src/go.chromium.org/chromiumos/config\n"
+	@printf "\n"
+	@printf "Have you finished syncing? [y/N]" && read ans && [ $${ans:-N} = y ]
+
 .PHONY: up-dev
-up-dev:
+up-dev: check-sync
 	gae.py upload -A $(GCP_PROJECT_DEV) --app-dir $(APP_PATH) -f
 	gae.py switch -A $(GCP_PROJECT_DEV) --app-dir $(APP_PATH) -f
 
@@ -83,7 +91,7 @@ cleanup-dev:
 	gae.py cleanup -A $(GCP_PROJECT_DEV) --app-dir $(APP_PATH)
 
 .PHONY: up-prod
-up-prod:
+up-prod: check-sync
 	gae.py upload -A $(GCP_PROJECT) --app-dir $(APP_PATH)
 
 .PHONY: switch-prod
