[buildbucket] add index for status_v2 monitoring
This is a missing change in https://crrev.com/c/2709934.

Bug: 1180496
Change-Id: I72403e22eb1d624967563169170265dd7a065c2b
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2713163
Reviewed-by: Andrii Shyshkalov <tandrii@google.com>
Reviewed-by: Robbie Iannucci <iannucci@chromium.org>
Commit-Queue: Scott Lee <ddoman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#38699}

--- a/appengine/cr-buildbucket/index.yaml
+++ b/appengine/cr-buildbucket/index.yaml
@@ -35,7 +35,7 @@ indexes:
   - name: is_leased
   - name: lease_expiration_date
 
-# Build lease/start latency monitoring.
+# Build lease/start latency monitoring w/ legacy.
 - kind: Build
   properties:
   - name: bucket_id
@@ -44,12 +44,31 @@ indexes:
   - name: never_leased
   - name: create_time
 
-# metrics.set_build_latency needs this index
+# Build lease/start latency monitoring.
+- kind: Build
+  properties:
+  - name: bucket_id
+  - name: experimental
+  - name: status_v2
+  - name: never_leased
+  - name: create_time
+
+# metrics.set_build_latency needs this index (legacy)
 - kind: Build
   properties:
   - name: bucket_id
   - name: experimental
   - name: never_leased
   - name: status
+  - name: tags
+  - name: create_time
+
+# metrics.set_build_latency needs this index
+- kind: Build
+  properties:
+  - name: bucket_id
+  - name: experimental
+  - name: never_leased
+  - name: status_v2
   - name: tags
   - name: create_time
