--- a/go/src/infra/appengine/rubber-stamper/appengine/app.yaml
+++ b/go/src/infra/appengine/rubber-stamper/appengine/app.yaml
@@ -6,8 +6,10 @@ luci_gae_vars:
   rubber-stamper-dev:
     AUTH_SERVICE_HOST: chrome-infra-auth-dev.appspot.com
     CONFIG_SERVICE_HOST: luci-config.appspot.com
+    TS_MON_ACCOUNT: app-engine-metric-publishers@prodx-mon-chrome-infra.google.com.iam.gserviceaccount.com
 
 entrypoint: >
   main
   -auth-service-host ${AUTH_SERVICE_HOST}
   -config-service-host ${CONFIG_SERVICE_HOST}
+  -ts-mon-account ${TS_MON_ACCOUNT}
