Monorail: add dependencies and configurations required for a basic TypeScript React setup in Monorail.
There are some opinionated choices I made here based on my own personal experience with React:

- Using TypeScript. TypeScript is great! We should use this. I think we could even start turning our old .js files into .ts files after this change. :)
- I picked style modules specifically as a CSS organization option because style modules seem to be the most standard way to add CSS to React apps. Style modules can be used alongside regular old CSS stylesheets.
- In addition, I set up our CSS build to use autoprefixer, a tool that automatically injects vendored prefixes for CSs properties that only exist under vendor flags in some browsers. I've found CSS autoprefixing to be a strict win for developer productivity - it basically means you never have to worry about vendor prefixes in CSS again and code size increases tend to be neglible.
- I added JSX accessibility linting to our ESLint config, which is a tool that automatically find accessibility issues in our JSX (HTML) through static analysis. For example, this linter will warn if an element with an onClick handler is not focusable (ie: if it's not a button).

Bug: monorail:8931
Change-Id: I99c3b9413e0193e4cc07e4b55fdaa4e75f12c886
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2625280
Commit-Queue: Tiffany Zhang <zhangtiff@chromium.org>
Reviewed-by: Dave Tu <dtu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#38883}

--- a/appengine/monorail/.eslintrc.json
+++ b/appengine/monorail/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-    "extends": "google",
+    "extends": [
+        "google",
+        "plugin:css-modules/recommended"
+    ],
+    "plugins": ["css-modules", "jsx-a11y"],
     "env": {
         "es6": true
     },
