--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -4,15 +4,29 @@
   "version": "1.0.0",
   "directories": {},
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@hot-loader/react-dom": "^17.0.1",
+    "autoprefixer": "^10.1.0",
     "axe-core": "^4.1.1",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
     "chai-dom": "^1.8.2",
     "chai-string": "^1.5.0",
     "circular-dependency-plugin": "^5.2.2",
+    "css-loader": "^5.0.1",
     "deep-equal": "^2.0.5",
     "eslint": "^7.16.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^5.2.3",
@@ -26,9 +40,11 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^7.2.0",
     "path": "^0.12.7",
+    "postcss-loader": "^4.1.0",
     "puppeteer": "^5.5.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "sinon": "^9.2.2",
+    "style-loader": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.2.0"
@@ -45,6 +61,8 @@
     "@chopsui/tsmon-client": "1.0.1",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.52",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "chart.js": "2.8.0",
     "debounce": "^1.2.0",
     "diff": "^5.0.0",
@@ -54,8 +72,11 @@
     "page": "^1.11.6",
     "pwa-helpers": "^0.9.1",
     "qs": "^6.9.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "typescript": "^4.1.3"
   }
 }
