csa: Stop schedule DUTs for AdminReset tasks
BUG=b:180135625
TEST=make test

Change-Id: Ica8c31fc4b5e94ff019a03e1595b2244ca5e0760
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2693425
Reviewed-by: Garry Wang <xianuowang@chromium.org>
Reviewed-by: Gregory Nisbet <gregorynisbet@google.com>
Reviewed-by: Allen Li <ayatane@chromium.org>
Commit-Queue: Otabek Kasimov <otabek@google.com>
Cr-Commit-Position: refs/heads/master@{#38926}

--- a/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
+++ b/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
@@ -3,7 +3,7 @@ cron:
   url: /internal/cron/push-repair-jobs-for-labstations
   schedule: every 60 minutes
 
-- description: push bots for admin tasks for need_repair|needs_reset
+- description: push bots for admin tasks for need_repair
   url: /internal/cron/push-bots-for-admin-tasks
   schedule: every 5 minutes
   retry_parameters:
