UFS: cron jobs to push UFS to InvV2 BQ
Bug: 1159907
Test: make dev; make test;

Change-Id: I85c1bed353d947aef60a0a1fe5e51d3d790e8a5f
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2728680
Reviewed-by: Anushruth  <anushruth@chromium.org>
Commit-Queue: Eshwar Narayan <eshwarn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#38957}

--- a/go/src/infra/unifiedfleet/app/config/config.cfg
+++ b/go/src/infra/unifiedfleet/app/config/config.cfg
@@ -29,7 +29,7 @@ cros_network_config {
 bucket_name: "unified-fleet-system-dev.appspot.com"
 machine_db_config_service: "machine-db"
 machine_db_host: "machine-db.appspot.com"
-cros_inventory_host: "cros-lab-inventory.appspot.com"
+cros_inventory_host: "cros-lab-inventory-dev.appspot.com"
 self_storage_bucket: "unified-fleet-system-dev.appspot.com"
 hart {
   project: "hardware-request-tracker"
@@ -38,3 +38,6 @@ hart {
 
 sheet_service_account: "sheet-access@unified-fleet-system-dev.iam.gserviceaccount.com"
 queen_service: "drone-queen-dev.appspot.com"
+enable_dronequeen_push: true
+disable_inv2_sync: true
+enable_lab_stateconfig_push: true
