Update package.json to use `npx`.
Also regenerated package-lock.json.

Change-Id: Ib0c41a8b17801d580b49c0203bb79eee63064f28
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2729405
Reviewed-by: Tiffany Zhang <zhangtiff@chromium.org>
Commit-Queue: Andrew Chang <andrewjc@google.com>
Cr-Commit-Position: refs/heads/master@{#38985}

--- a/crdx/chopsui-npm/package.json
+++ b/crdx/chopsui-npm/package.json
@@ -9,12 +9,12 @@
     "url": "https://chromium.googlesource.com/infra/infra/crdx/chopsui-npm.git"
   },
   "scripts": {
-    "bootstrap": "npm install && lerna bootstrap --hoist",
+    "bootstrap": "npm install && npx lerna bootstrap --hoist",
     "start": "webpack-dev-server --progress --hot",
     "test": "karma start --coverage --no-color",
     "check": "gts check",
     "clean": "gts clean",
-    "compile": "lerna run tsc",
+    "compile": "npx lerna run tsc",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
