go: add github.com/dgraph-io/badger/v3
--------------------------------------------------------------------------
Dependencies added to deps.lock:
  * github.com/dgraph-io/badger/v3
--------------------------------------------------------------------------
--------------------------------------------------------------------------
Updated repos:
https://code.googlesource.com/gocloud.git/+log/00a78aafed49..04d592f739d3
https://chromium.googlesource.com/external/github.com/StackExchange/wmi.git/+log/cbe66965904d..fe8f1750fd46
https://chromium.googlesource.com/external/github.com/antlr/antlr4.git/+log/a60c32d36933..0f8bddcbc14b
https://chromium.googlesource.com/external/github.com/bazelbuild/buildtools.git/+log/752270cf2f52..f2aed9ee205d
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis.git/+log/9e72daff42c9..6345202a036a
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis-sdks.git/+log/68abbb6d04a4..585919011f8f
https://chromium.googlesource.com/external/github.com/chromedp/cdproto.git/+log/32adaa8323b6..aabfe75e3e09
https://chromium.googlesource.com/external/github.com/chromedp/chromedp.git/+log/21bf361c969e..40faabd665de
https://chromium.googlesource.com/external/github.com/go-sql-driver/mysql.git/+log/fe2230a8b20c..33267428f77e
https://chromium.googlesource.com/external/github.com/golang/protobuf.git/+log/4846b58453b3..78b1f09b4310
https://chromium.googlesource.com/external/github.com/gomodule/redigo.git/+log/8a8dbfb3ecbd..72af8129e040
https://chromium.googlesource.com/external/github.com/google/go-cmp.git/+log/ec71d6d79053..8fa37b4dd109
https://chromium.googlesource.com/external/github.com/google/go-querystring.git/+log/55faf79c297f..6c9448afb101
https://chromium.googlesource.com/external/github.com/google/pprof.git/+log/1612e9be7af6..cbba55b83ad5
https://chromium.googlesource.com/external/github.com/googleapis/gax-go.git/+log/4b4e53fa4560..fbaf9882acf3
https://chromium.googlesource.com/external/github.com/kisielk

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -586,3 +586,8 @@ import:
 - package: gopkg.in/square/go-jose.v2
   version: ~2.5.1
   repo: https://chromium.googlesource.com/external/github.com/square/go-jose.git
+- package: github.com/dgraph-io/badger
+  repo: https://chromium.googlesource.com/external/github.com/dgraph-io/badger.git
+  version: master
+  subpackages:
+  - v3
