--- a/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
+++ b/go/src/infra/appengine/crosskylabadmin/app/appengine/cron.yaml
@@ -34,6 +34,11 @@ cron:
   schedule: every sunday 1:00
   timezone: America/Los_Angeles
 
+- description: push bots for admin audit tasks for RPM check
+  url: /internal/cron/push-admin-audit-rpm-tasks-for-duts
+  schedule: 1st sunday of month 01:45
+  timezone: America/Los_Angeles
+
 - description: push bots for admin audit tasks for Servo USB-key
   url: /internal/cron/push-admin-audit-usbkey-tasks-for-duts
   schedule: every sunday 1:15
