[cr-buildbucket] Serve CancelBuild requests from default-go
Bug: 1042991
Change-Id: I5bf5c56014951f5872e6949afa70742bda671a0a
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2730675
Reviewed-by: Yuanjun Huang <yuanjunh@google.com>
Reviewed-by: Scott Lee <ddoman@chromium.org>
Reviewed-by: Robbie Iannucci <iannucci@chromium.org>
Commit-Queue: smut <smut@google.com>
Cr-Commit-Position: refs/heads/master@{#39078}

--- a/appengine/cr-buildbucket/dispatch.yaml
+++ b/appengine/cr-buildbucket/dispatch.yaml
@@ -36,3 +36,7 @@ dispatch:
   # UpdateBuild is implemented in Go, so serve it from there.
   - url: "*/prpc/buildbucket.v2.Builds/UpdateBuild"
     service: default-go
+
+  # CancelBuild is implemented in Go, so serve it from there.
+  - url: "*/prpc/buildbucket.v2.Builds/CancelBuild"
+    service: default-go
