--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -541,8 +541,6 @@ import:
   subpackages:
   - runtime/Go/antlr
 - package: github.com/google/cel-go
-  # Next version breaks compatibility with proto v1, in particular breaking
-  # infra/cros/cmd/tclint/internal/metadata that uses v1 protos.
   version: 385dcdcbc4865cb64aa953c12d7549615cb5fd03
   repo: https://chromium.googlesource.com/external/github.com/google/cel-go.git
 - package: github.com/protocolbuffers/txtpbfmt
@@ -586,3 +584,6 @@ import:
 - package: gopkg.in/square/go-jose.v2
   version: ~2.5.1
   repo: https://chromium.googlesource.com/external/github.com/square/go-jose.git
+- package: github.com/bmatcuk/doublestar
+  repo: https://chromium.googlesource.com/external/github.com/bmatcuk/doublestar.git
+  version: upstream/master
