deps: add github.com/dgraph-io/badger/v3
--------------------------------------------------------------------------
Dependencies added to deps.lock:
  * github.com/DataDog/zstd
  * github.com/cespare/xxhash
  * github.com/dgraph-io/badger/v3
  * github.com/dgraph-io/ristretto
  * github.com/gogo/protobuf
  * github.com/golang/snappy
  * github.com/google/flatbuffers
--------------------------------------------------------------------------
--------------------------------------------------------------------------
Updated repos:
https://code.googlesource.com/gocloud.git/+log/7b265c31d18a..8d772f098dd1
https://chromium.googlesource.com/external/github.com/chromedp/cdproto.git/+log/50b9f457e822..4e41b2544bc6
https://chromium.googlesource.com/external/github.com/google/go-querystring.git/+log/6c9448afb101..1f4a1f9d6e29
--------------------------------------------------------------------------

Bug: 1172879
Change-Id: I717e656400296679ef4281d43dd97ae9129281a1
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2744842
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>
Reviewed-by: Junji Watanabe <jwata@google.com>
Commit-Queue: Takuto Ikuta <tikuta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#39313}

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -587,3 +587,18 @@ import:
 - package: github.com/bmatcuk/doublestar
   repo: https://chromium.googlesource.com/external/github.com/bmatcuk/doublestar.git
   version: upstream/master
+- package: github.com/dgraph-io/badger/v3
+  version: master
+  repo: https://chromium.googlesource.com/external/github.com/dgraph-io/badger.git
+- package: github.com/DataDog/zstd
+  repo: https://chromium.googlesource.com/external/github.com/DataDog/zstd.git
+- package: github.com/cespare/xxhash
+  repo: https://chromium.googlesource.com/external/github.com/cespare/xxhash.git
+- package: github.com/dgraph-io/ristretto
+  repo: https://chromium.googlesource.com/external/github.com/dgraph-io/ristretto.git
+- package: github.com/gogo/protobuf
+  repo: https://chromium.googlesource.com/external/github.com/gogo/protobuf.git
+- package: github.com/golang/snappy
+  repo: https://chromium.googlesource.com/external/github.com/golang/snappy.git
+- package: github.com/google/flatbuffers
+  repo: https://chromium.googlesource.com/external/github.com/google/flatbuffers.git
