[cr-buildbucket] remove unnecessary configs for beefy yaml
Bug: 1186481
Change-Id: Ia046cddae226bb79c0f64a0e9c528655c9c9eb18
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2754259
Commit-Queue: Yuanjun Huang <yuanjunh@google.com>
Reviewed-by: Andrii Shyshkalov <tandrii@google.com>
Reviewed-by: Robbie Iannucci <iannucci@chromium.org>
Cr-Commit-Position: refs/heads/master@{#39321}

--- a/appengine/cr-buildbucket/dispatch.yaml
+++ b/appengine/cr-buildbucket/dispatch.yaml
@@ -40,3 +40,7 @@ dispatch:
   # CancelBuild is implemented in Go, so serve it from there.
   - url: "*/prpc/buildbucket.v2.Builds/CancelBuild"
     service: default-go
+
+  # Only serve it on default service.
+  - url: "*/build/*"
+    service: default
