--- a/appengine/cr-buildbucket/module-beefy.yaml
+++ b/appengine/cr-buildbucket/module-beefy.yaml
@@ -17,7 +17,7 @@ version: 1
 runtime: python27
 api_version: 1
 threadsafe: false   # Force no concurrency
-instance_class: B8  # The beefiest instance class: 2 GB, 4.8 GHz CPU
+instance_class: B4  # 1 GB, 2.4 GHz CPU
 basic_scaling:
   max_instances: 30
 
