Exclude coverage experimental bot from sheriff.
Bug: 1185208
Change-Id: I04bb1415b96e74a3835220404cc0d92f70f7dd96
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2764810
Reviewed-by: Stephen Martinis <martiniss@chromium.org>
Commit-Queue: benjamin joyce <bjoyce@chromium.org>
Cr-Commit-Position: refs/heads/master@{#39410}

--- a/go/src/infra/appengine/sheriff-o-matic/config/config.json
+++ b/go/src/infra/appengine/sheriff-o-matic/config/config.json
@@ -39,6 +39,7 @@
       "excluded_builders": [
         "android-incremental-dbg",
         "android-nougat-arm64-rel",
+        "android-pie-arm64-coverage-experimental-rel",
         "Oreo Phone Tester"
       ]
     },
