chromeperf: Write signal quality using to datastore
Write bisection counts and culprit finding counts for each tests. This
can be used to calculate signal quality metric, which is going to be
used for selecting alert with better reproduction rate from alert group.

Change-Id: I99bda240ebd5c429a45136d31634ca4d5bc7fb87
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2753287
Auto-Submit: Chenlin Fan <fancl@chromium.org>
Reviewed-by: Dean Berris <dberris@chromium.org>
Commit-Queue: Chenlin Fan <fancl@chromium.org>
Cr-Commit-Position: refs/heads/master@{#39444}

--- a/chromeperf/tox.ini
+++ b/chromeperf/tox.ini
@@ -48,7 +48,9 @@ depends =
 setenv =
     PYTHONPATH =
     CLOUDSDK_CORE_PROJECT = chromeperf
-commands = pytest -n auto --cov={envsitepackagesdir}/chromeperf --cov-append {posargs}
+commands = pytest -n auto \
+           --cov={envsitepackagesdir}/chromeperf --cov-append \
+           -p no:unraisableexception {posargs}
 
 [testenv:report]
 deps=coverage
@@ -59,3 +61,17 @@ commands=coverage html
 deps=coverage
 skip_install=true
 commands=coverage erase
+
+[testenv:single]
+deps =
+    deepdiff
+    psutil
+    pytest
+    pytest-mock
+    pytest-xdist
+    pytest-bdd
+setenv =
+    PYTHONPATH =
+    CLOUDSDK_CORE_PROJECT = chromeperf
+commands = pytest -n 1 \
+           -p no:unraisableexception {posargs}
