Move branch_util to infra/infra
Straight copies + many, many tweaks (~60) to appease golint

BUG=chromium:1185285
TEST=go test

Change-Id: I156ddbeeeff37ed679368ba9d687b3106dfb3591
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2754260
Commit-Queue: Jack Neus <jackneus@google.com>
Reviewed-by: Jared Loucks <jaredloucks@google.com>
Reviewed-by: Julio Hurtado <juahurta@google.com>
Cr-Commit-Position: refs/heads/master@{#39469}

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -599,3 +599,6 @@ import:
   repo: https://chromium.googlesource.com/external/github.com/golang/snappy.git
 - package: github.com/google/flatbuffers
   repo: https://chromium.googlesource.com/external/github.com/google/flatbuffers.git
+- package: github.com/otiai10/copy
+  repo: https://chromium.googlesource.com/external/github.com/otiai10/copy.git
+  version: upstream/main
