SoM: Exclude a few more LTS builders from creating alerts.
The arm-generic-* ones have been deleted, so remove those.

The *-beta builders have moved to a different project, so remove those.

And add a couple missing linux* builders.

Bug: 1184374
Change-Id: I09a7003a4f4ff7e5bf7ebea39285cd8d0962e4f9
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2780213
Reviewed-by: Garrett Beaty <gbeaty@chromium.org>
Reviewed-by: Owen Rodley <orodley@chromium.org>
Commit-Queue: Ben Pastene <bpastene@chromium.org>
Cr-Commit-Position: refs/heads/master@{#39616}

--- a/go/src/infra/appengine/sheriff-o-matic/config/config.json
+++ b/go/src/infra/appengine/sheriff-o-matic/config/config.json
@@ -6,24 +6,21 @@
   "builder_groups": {
     "chrome": {
       "excluded_builders": [
-        "chromeos-arm-generic-beta",
-        "chromeos-arm-generic-ltc",
-        "chromeos-arm-generic-stable",
-        "chromeos-betty-pi-arc-chrome-beta",
         "chromeos-betty-pi-arc-chrome-ltc",
         "chromeos-betty-pi-arc-chrome-lts",
         "chromeos-betty-pi-arc-chrome-stable",
-        "chromeos-eve-chrome-beta",
         "chromeos-eve-chrome-ltc",
         "chromeos-eve-chrome-lts",
         "chromeos-eve-chrome-stable",
-        "chromeos-kevin-chrome-beta",
         "chromeos-kevin-chrome-ltc",
         "chromeos-kevin-chrome-lts",
         "chromeos-kevin-chrome-stable",
-        "linux-chromeos-beta",
         "linux-chromeos-ltc",
-        "linux-chromeos-stable"
+        "linux-chromeos-lts",
+        "linux-chromeos-stable",
+        "linux64-ltc",
+        "linux64-lts",
+        "linux64-stable"
       ]
     },
     "chromium": {
