🚝 Reduce file watching to reduce dev server CPU load.
Change-Id: Idd5850312d746d67ad75fb3956cf99991aba8251
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2782419
Auto-Submit: Dave Tu <dtu@chromium.org>
Reviewed-by: Kevin Weng <kweng@google.com>
Commit-Queue: Kevin Weng <kweng@google.com>
Cr-Commit-Position: refs/heads/master@{#39655}

--- a/appengine/monorail/Makefile
+++ b/appengine/monorail/Makefile
@@ -11,7 +11,7 @@ STAGEID= monorail-staging
 PRODID= monorail-prod
 
 GAE_PY?= python gae.py
-DEV_APPSERVER_FLAGS?= "--watcher_ignore_re=.*/node_modules/"
+DEV_APPSERVER_FLAGS?= --watcher_ignore_re="(.*/lib|.*/node_modules|.*/third_party|.*/venv)"
 
 WEBPACK_PATH := ./node_modules/webpack-cli/bin/cli.js
 
