--- a/infra/config/recipes.cfg
+++ b/infra/config/recipes.cfg
@@ -20,17 +20,17 @@
       "url": "https://chromium.googlesource.com/chromiumos/config.git"
     },
     "chromiumos_proto": {
-      "branch": "refs/heads/master",
+      "branch": "refs/heads/main",
       "revision": "3a8f543a335176544bcd7ba295e9aacd47b68cc4",
       "url": "https://chromium.googlesource.com/chromiumos/infra/proto.git"
     },
     "depot_tools": {
-      "branch": "master",
+      "branch": "main",
       "revision": "84ce160786308521c2fd115fa554ca6be161158c",
       "url": "https://chromium.googlesource.com/chromium/tools/depot_tools.git"
     },
     "recipe_engine": {
-      "branch": "master",
+      "branch": "main",
       "revision": "3c382e042b7780dba972c10a26c592c14f1da1a6",
       "url": "https://chromium.googlesource.com/infra/luci/recipes-py.git"
     }
