🚝 Add Babel plugins for new JS/TS features and update JS deps.
Istanbul (our code coverage tool) is deprecated, which is introducing
some dependency risk. We should upgrade to NYC at some point.

Bug: monorail:8931
Change-Id: I3570552f45ef6138d6199ec7b8a3be79c7bb64b6
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2783368
Reviewed-by: Tiffany Zhang <zhangtiff@chromium.org>
Commit-Queue: Dave Tu <dtu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#39707}

--- a/appengine/monorail/.babelrc
+++ b/appengine/monorail/.babelrc
@@ -8,11 +8,15 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    // Allows the use of class properties.
+    "@babel/plugin-proposal-class-properties",
+    // Allows the use of decorators.
+    ["@babel/plugin-proposal-decorators", {"decoratorsBeforeExport": true}],
+    // Allows the use of ES6 spread operators.
+    "@babel/plugin-proposal-object-rest-spread",
     // Support Webpack's import() feature, which uses Promises.
     "@babel/plugin-syntax-dynamic-import",
     // Supports transforming JSX syntax into JavaScript.
-    "@babel/plugin-transform-react-jsx",
-    // Allows the use of ES6 spread operators.
-    "@babel/plugin-proposal-object-rest-spread"
+    "@babel/plugin-transform-react-jsx"
   ]
 }
