--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -4,32 +4,34 @@
   "version": "1.0.0",
   "directories": {},
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-react-jsx": "^7.12.12",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@hot-loader/react-dom": "^17.0.1",
-    "autoprefixer": "^10.1.0",
-    "axe-core": "^4.1.1",
+    "autoprefixer": "^10.2.5",
+    "axe-core": "^4.1.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "chai": "^4.2.0",
-    "chai-dom": "^1.8.2",
+    "chai": "^4.3.4",
+    "chai-dom": "^1.9.0",
     "chai-string": "^1.5.0",
     "circular-dependency-plugin": "^5.2.2",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.1.3",
     "deep-equal": "^2.0.5",
-    "eslint": "^7.16.0",
+    "eslint": "^7.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "html-webpack-plugin": "^4.5.0",
+    "eslint-plugin-react": "^7.23.0",
+    "html-webpack-plugin": "^4.5.2",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^5.2.3",
+    "karma": "^6.3.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-mocha": "^2.0.1",
@@ -40,14 +42,14 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^7.2.0",
     "path": "^0.12.7",
-    "postcss-loader": "^4.1.0",
-    "puppeteer": "^5.5.0",
+    "postcss-loader": "^4.2.0",
+    "puppeteer": "^8.0.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
-    "sinon": "^9.2.2",
+    "sinon": "^10.0.0",
     "style-loader": "^2.0.0",
-    "webpack": "^4.44.2",
-    "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^4.2.0"
+    "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.5.0"
   },
   "scripts": {
     "test": "karma start --coverage --no-colors && curl -F \"file=@full_results.json\" -F \"master=luci.infra.try\" -F \"builder=infra-try-frontend\" -F \"testtype=monorail\" --request POST https://test-results-test-hrd.appspot.com/testfile/upload --verbose"
@@ -60,23 +62,23 @@
     "@chopsui/prpc-client": "0.0.2",
     "@chopsui/tsmon-client": "1.0.1",
     "@types/gapi": "0.0.39",
-    "@types/gapi.auth2": "0.0.52",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/gapi.auth2": "0.0.54",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.1",
     "chart.js": "2.8.0",
-    "debounce": "^1.2.0",
+    "debounce": "^1.2.1",
     "diff": "^5.0.0",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
     "mousetrap": "^1.6.5",
     "page": "^1.11.6",
     "pwa-helpers": "^0.9.1",
-    "qs": "^6.9.4",
+    "qs": "^6.10.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "17.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   }
 }
