[COIL] Remove non-inclusive language from crosskylabadmin.
Remove uses of the term "master" and replace it with uses of "main"
in CrOSSkylabAdmin.

BUG=crbug.com/1118036
TEST=unittests

Change-Id: If53ed10c2e2e4430b6e125215f30c4a407a8d360
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2797713
Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
Reviewed-by: Otabek Kasimov <otabek@google.com>
Cr-Commit-Position: refs/heads/master@{#39809}

--- a/go/src/infra/appengine/crosskylabadmin/app/appengine/devcfg/services/dev/config-template.cfg
+++ b/go/src/infra/appengine/crosskylabadmin/app/appengine/devcfg/services/dev/config-template.cfg
@@ -36,6 +36,7 @@ cron {
     max_unhealthy_duts: 2
   }
 }
+# TODO(gregorynisbet): remove this entry, the skylab inventory no longer exists.
 inventory {
   dut_info_cache_validity: {
     seconds: 900
@@ -43,7 +44,7 @@ inventory {
   gitiles_host: "chrome-internal.googlesource.com"
   gerrit_host: "chrome-internal-review.googlesource.com"
   project: "chromeos/infra_internal/skylab_inventory"
-  branch: "master"
+  branch: "main"
   lab_data_path: "data/skylab/lab.textpb"
   infrastructure_data_path: "data/skylab/server_db.textpb"
   environment: "ENVIRONMENT_STAGING"
@@ -63,6 +64,6 @@ stable_version_config {
   gerrit_host: "chrome-internal-review.googlesource.com"
   gitiles_host: "chrome-internal.googlesource.com"
   project: "chromeos/infra/config"
-  branch: "master"
+  branch: "main"
   stable_version_data_path: "lab_platform/stable_version_data/stable_versions.cfg"
 }
