docker_devices: Add python3 to list of pkgs installed in container.
crrev.com/c/2798959 switched a bot to use python3, but I'm pretty sure
python3 isn't installed in ubuntu by default. Whoops.

Bug: 1012230
Change-Id: Ic8c5c0b091bb77e3c25db0c7cf9f6057fea5ed28
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2799825
Reviewed-by: Haiyang Pan <hypan@google.com>
Reviewed-by: Elliott Friedman <friedman@chromium.org>
Commit-Queue: Ben Pastene <bpastene@chromium.org>
Cr-Commit-Position: refs/heads/master@{#39849}

--- a/docker/docker_devices/Dockerfile
+++ b/docker/docker_devices/Dockerfile
@@ -6,8 +6,8 @@ ENV CHROMIUM_REV 4f36f9c9d232eeb83825f6f5597ae17dd6786445
 RUN /usr/bin/apt-get update
 RUN /usr/bin/apt-get -y dist-upgrade
 RUN /usr/bin/apt-get -y install curl iputils-ping locales lsb-release lsof \
-      net-tools netcat-openbsd parted python rsync sshpass sudo udev usbutils \
-      wget
+      net-tools netcat-openbsd parted python python3 rsync sshpass sudo udev \
+      usbutils wget
 
 # Install tzdata here rather than as part of install-build-deps.sh since the
 # DEBIAN_FRONTEND=noninteractive env var doesn't appear to apply to
