[go] Add github.com/google/tink/go to deps.
Other updates repos:
https://code.googlesource.com/gocloud.git/+log/1bdaf93c2599..625aef9b4718
https://chromium.googlesource.com/external/github.com/chromedp/chromedp.git/+log/ac448d20810e..5b511f121cb2
https://chromium.googlesource.com/external/github.com/dgraph-io/badger.git/+log/8cb704777dc5..7d7d7908a001
https://chromium.googlesource.com/external/github.com/go-sql-driver/mysql.git/+log/33267428f77e..bcc459a90641
https://chromium.googlesource.com/external/github.com/golang/groupcache.git/+log/8c9f03a8e57e..41bb18bfe9da
https://chromium.googlesource.com/external/github.com/golang/protobuf.git/+log/af940030a2b7..ae97035608a7
https://chromium.googlesource.com/external/github.com/google/flatbuffers.git/+log/3b7d1e86b46e..1aa0c2f6a9c2
https://chromium.googlesource.com/external/github.com/google/uuid.git/+log/bfb86fa49a73..512b657a4288
https://chromium.googlesource.com/external/github.com/kevinburke/ssh_config.git/+log/4977a11b4351..beb851b6a483
https://chromium.googlesource.com/external/github.com/klauspost/compress.git/+log/2bb69be19106..b2eb8368e62b
https://chromium.googlesource.com/external/github.com/klauspost/cpuid.git/+log/3df0045a253f..c6a3519c8125
https://chromium.googlesource.com/external/github.com/microsoft/go-winio.git/+log/6eac466e5fa3..5516f17a5958
https://chromium.googlesource.com/external/github.com/mostynb/zstdpool-syncpool.git/+log/66ec463a4df3..e1cddd5d58e0
https://chromium.googlesource.com/external/github.com/otiai10/copy.git/+log/51bf83a372fd..46369e3263f1
https://chromium.googlesource.com/external/github.com/sergi/go-diff.git/+log/0a651d56613f..849d7ebc9716
https://go.googlesource.com/build.git/+log/d7600ec889c8..77019952e442
https://go.googlesource.com/net.git/+log/2c4c8ecb7826..0fccb6fa2b5c
https://go.googlesource.com/sys.git/+log/47abb6519492..43e1dd70ce54
https://go.googlesource.com/text.git/+log/e3aa4adf54f6..e328d63cff14
https://go.googlesource.com/tools.git/+log/52cb77242b3b..8c34cc9cafff
https:/

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -573,3 +573,8 @@ import:
 - package: github.com/otiai10/copy
   repo: https://chromium.googlesource.com/external/github.com/otiai10/copy.git
   version: upstream/main
+- package: github.com/google/tink/go
+  version: upstream/master
+  repo: https://chromium.googlesource.com/external/github.com/google/tink.git
+  subpackages:
+  - go
