--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -13,7 +13,6 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@hot-loader/react-dom": "^17.0.1",
     "autoprefixer": "^10.2.5",
     "axe-core": "^4.1.3",
     "babel-eslint": "^10.1.0",
@@ -61,10 +60,11 @@
     "@chopsui/karma-reporter": "^1.1.5",
     "@chopsui/prpc-client": "0.0.2",
     "@chopsui/tsmon-client": "1.0.1",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^5.0.0-alpha.27",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.54",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.1",
     "chart.js": "2.8.0",
     "debounce": "^1.2.1",
     "diff": "^5.0.0",
@@ -75,7 +75,8 @@
     "pwa-helpers": "^0.9.1",
     "qs": "^6.10.1",
     "react": "^17.0.1",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
