--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -65,6 +65,8 @@
     "@material-ui/core": "^5.0.0-alpha.27",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.54",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.1",
     "chart.js": "2.8.0",
     "debounce": "^1.2.1",
     "diff": "^5.0.0",
