--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -70,8 +70,10 @@
     "chart.js": "2.8.0",
     "debounce": "^1.2.1",
     "diff": "^5.0.0",
+    "dompurify": "2.2.7",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
+    "marked": "~2.0.1",
     "mousetrap": "^1.6.5",
     "page": "^1.11.6",
     "pwa-helpers": "^0.9.1",
