[Karte] Add realclean target to Makefile
Make it easier to keep generated files in sync by having a dedicated
command that removes every generated file.

BUG=None
TEST=make realclean; make gen

Change-Id: Ia39a8cfc0d6f4aafa0ab11c87284334078e8c28f
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2829571
Commit-Queue: Gregory Nisbet <gregorynisbet@google.com>
Reviewed-by: Allen Li <ayatane@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40197}

--- a/go/src/infra/appengine/karte/Makefile
+++ b/go/src/infra/appengine/karte/Makefile
@@ -14,3 +14,11 @@ test:
 
 gen:
 	go generate ./...
+
+# Add a target for removing the generated files.
+# It is easier to keep the generated files in sync if there's
+# a straightforward way to remove them.
+.PHONY: realclean
+realclean:
+	find . -name '*.pb.go' -delete
+	$(RM) ./api/pb.discovery.go
