Exclude linux-bionic-rel from sheriff-o-matic
We're still greening up the builder, and sheriffs are seeing alerts
about this builder.

R=estaab@chromium.org

Bug: 1199425
Change-Id: I0cfa9a713bb76ddcda7b001e441b6b5fe27213d9
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2837005
Reviewed-by: Stephen Martinis <martiniss@chromium.org>
Reviewed-by: Erik Staab <estaab@chromium.org>
Auto-Submit: Stephen Martinis <martiniss@chromium.org>
Commit-Queue: Erik Staab <estaab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40233}

--- a/go/src/infra/appengine/sheriff-o-matic/config/config.json
+++ b/go/src/infra/appengine/sheriff-o-matic/config/config.json
@@ -51,7 +51,8 @@
     },
     "chromium.linux": {
       "excluded_builders": [
-        "Leak Detection Linux"
+        "Leak Detection Linux",
+        "linux-bionic-rel"
       ]
     },
     "chromium.mac": {
