Limit tricium runs in infra to those with tryjob access
Without a whitelisted_group field in "repo" in the tricium
project config, any user with a gmail account may start
as many tricium jobs as they wish with arbitrary patches;
chromium limits this to a particular group for security
reasons.

Change-Id: I58ec4155c33814f926185b20e6ce1ace4969c1c7
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2838146
Reviewed-by: Vadim Shtayura <vadimsh@chromium.org>
Reviewed-by: Andrii Shyshkalov <tandrii@google.com>
Commit-Queue: Quinten Yearsley <qyearsley@chromium.org>
Cr-Commit-Position: refs/heads/master@{#40284}

--- a/infra/config/tricium-prod.cfg
+++ b/infra/config/tricium-prod.cfg
@@ -48,6 +48,7 @@ repos {
     project: "infra/luci/luci-go"
     git_url: "https://chromium.googlesource.com/infra/luci/luci-go"
   }
+  whitelisted_group: "project-infra-tryjob-access"
 }
 
 service_account: "tricium-prod@appspot.gserviceaccount.com"
